--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "gatsby-plugin-manifest": "^2.4.32",
     "gatsby-plugin-offline": "^3.2.29",
     "gatsby-plugin-react-helmet": "^3.3.12",
-    "gatsby-plugin-sharp": "^2.6.37",
+    "gatsby-plugin-sharp": "^2.6.38",
     "gatsby-plugin-typescript": "^2.4.21",
+    "gatsby-remark-images": "^3.3.32",
     "gatsby-source-filesystem": "^2.3.31",
     "gatsby-transformer-remark": "^2.8.37",
     "gatsby-transformer-sharp": "^2.5.16",
