--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-offline": "^3.2.29",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-sharp": "^2.6.38",
+    "gatsby-plugin-snipcart": "^1.1.2",
     "gatsby-plugin-typescript": "^2.4.21",
     "gatsby-remark-images": "^3.3.32",
     "gatsby-source-contentful": "^2.3.51",
